--- a/app/src/copmponents/FormWrap/styles.module.css
+++ b/app/src/copmponents/FormWrap/styles.module.css
@@ -1,11 +1,13 @@
 .openFormWrap {
-    width: 100%;
     height: 60px;
-    padding: 30px 0;
     font-size: 22px;
     color: #969ca1;
 }
 
 .openFormWrap span {
     cursor: pointer;
+    text-transform:uppercase
+}
+.openFormWrap span:hover {
+    color: white
 }
