--- a/app/src/copmponents/Layout/styles.module.css
+++ b/app/src/copmponents/Layout/styles.module.css
@@ -1,3 +1,15 @@
+.main {
+  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex-grow: 1;
+  overflow-x: auto;
+}
+
 .header {
   width: 100vw;
   height: 80px;
