--- a/app/src/copmponents/Buttons/styles.module.css
+++ b/app/src/copmponents/Buttons/styles.module.css
@@ -21,3 +21,17 @@
     background: #b3acde !important;
     cursor: initial!important;
 }
+
+.iconWrap {
+    cursor: pointer;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.iconWrap:hover {
+    background: #4f5661;
+}
