--- a/app/src/copmponents/Inputs/styles.module.css
+++ b/app/src/copmponents/Inputs/styles.module.css
@@ -8,3 +8,18 @@
     font-size: 24px;
     color: white
 }
+
+.label {
+    font-size: 12px;
+    color: #80888e !important;
+}
+
+.textarea {
+    resize: none;
+    width: 100%;
+    background: #2b343b;
+    outline: none;
+    border: none;
+    padding: 10px 12px;
+    color: white
+}
