--- a/app/src/pages/Board/Task/styles.module.css
+++ b/app/src/pages/Board/Task/styles.module.css
@@ -4,10 +4,15 @@
     height: auto;
     min-width: 250px;
     background: #1e272e;
+    position: relative;
 }
 
 .wrap:hover .container {
     background: rgba(44, 52, 61, 0.6);
+}
+
+.none {
+    display: none;
 }
 
 .drag {
@@ -15,17 +20,17 @@
 }
 
 .top {
-    padding-bottom: 0!important;
+    padding-bottom: 0 !important;
     margin: 10px 0 0 0;
 }
 
 .bottom {
-    padding-top: 0!important;
+    padding-top: 0 !important;
     margin: 0 0 10px 0;
 }
 
 .body {
-    padding: 0!important;
+    padding: 0 !important;
     display: none;
 }
 
