--- a/app/src/index.css
+++ b/app/src/index.css
@@ -9,6 +9,10 @@ ol[class] {
     padding: 0;
 }
 
+body {
+    background: rgba(43, 52, 59, 0.6);
+}
+
 body,
 h1,
 h2,
@@ -96,7 +100,7 @@ code {
 }
 
 .m-2 {
-    margin: 16x;
+    margin: 16px;
 }
 
 .mt-2 {
@@ -119,13 +123,15 @@ code {
     padding-left: 8px;
 }
 
-.dndarea {
-    width: 100%;
-    height: 50px;
-    background: grey;
-    display: none;
+.dropListener {
+    height: 0;
+    transition: 0.6s;
 }
 
-.dnd .dndarea {
-    display: block;
+.drop {
+    height: 120px!important;
+}
+
+.pointer-events *:not(div[draggable]) {
+    pointer-events: none;
 }
