--- a/app/src/pages/Board/Task/styles.module.css
+++ b/app/src/pages/Board/Task/styles.module.css
@@ -1,10 +1,12 @@
 .wrap {
+    border: none;
     width: 300px;
-    padding: 4px 10px 0 10px;
     height: auto;
     min-width: 250px;
-    background: #1e272e;
+    background: transparent;
     position: relative;
+    padding: 10px;
+    transition: 0.5s;
 }
 
 .wrap:hover .container {
@@ -31,24 +33,20 @@
 
 .body {
     padding: 0 !important;
-    display: none;
-}
-
-.wrap:hover .body {
-    display: block;
 }
 
 .description {
     overflow: hidden;
     text-overflow: ellipsis;
-    word-break: break-all;
     max-height: 50px;
     font-size: 12px;
 }
 
 .title {
-    height: 46px;
-    padding: 10px 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 30px;
+    padding: 8px 0 8px 0;
     text-transform: uppercase
 }
 
@@ -58,10 +56,17 @@
     height: auto;
     min-width: 250px;
     padding: 10px 10px 0 10px;
+
 }
 
 .btnWrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.draggable {
+    padding: 10px;
+    background: #1e272e;
+    border: 1px solid #1e272e;
 }
