add crud logic in task

--- a/app/src/pages/Board/Task/styles.module.css
+++ b/app/src/pages/Board/Task/styles.module.css
@@ -1,4 +1,5 @@
 .wrap {
+    cursor: move;
     border: none;
     width: 300px;
     height: auto;
@@ -6,15 +7,16 @@
     background: transparent;
     position: relative;
     padding: 10px;
-    transition: 0.5s;
+    transition: 0.2s;
 }
 
 .wrap:hover .container {
-    background: rgba(44, 52, 61, 0.6);
+    background: #384047;
 }
 
 .none {
     display: none;
+    background: rgba(43, 52, 59, 0.6)
 }
 
 .drag {
@@ -42,12 +44,19 @@
     font-size: 12px;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 .title {
     overflow: hidden;
     text-overflow: ellipsis;
-    height: 30px;
-    padding: 8px 0 8px 0;
-    text-transform: uppercase
+    height: 28px;
+    font-size: 16px;
+    padding: 4px 0 4px 0;
+    text-transform: uppercase;
 }
 
 .container {
@@ -55,13 +64,12 @@
     width: 100%;
     height: auto;
     min-width: 250px;
-    padding: 10px 10px 0 10px;
-
+    padding: 10px 10px 10px 10px;
 }
 
 .btnWrap {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
 }
 
