--- a/app/src/copmponents/Modal/styles.module.css
+++ b/app/src/copmponents/Modal/styles.module.css
@@ -1,7 +1,7 @@
 .container {
     height: 100vh;
     width: 100vw;
-    background-color: rgba(255,255,255, 0.2);
+    background-color: rgba(255,255,255, 0.17);
     position: fixed;
     top:0;
     left: 0;
@@ -18,13 +18,18 @@
 }
 
 .modal {
-    height: 400px;
+    min-height: 400px;
     position: relative;
     z-index: 3;
     padding: 20px;
-    background-color: #2b343b;
+    background-color: #1e272e;
     border-radius: 12px;
-    width: 65%;
-    max-width: 65%;
+    width: 80%;
+    max-width: 80%;
+}
 
+.closeBtnWrap {
+    position: absolute;
+    top:20px;
+    right: 20px;
 }
