--- a/app/src/copmponents/BreadCrums/style.module.css
+++ b/app/src/copmponents/BreadCrums/style.module.css
@@ -1,4 +1,16 @@
 .container {
     padding: 15px 0 15px 0;
-    font-weight: 500;
+    font-weight: 300;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.label {
+    text-transform: initial;
+    color: #7c8185;
+    margin-right: 10px;
+}
+
+.title {
+    margin-right: 10px;
 }
