--- a/app/src/copmponents/Modal/styles.module.css
+++ b/app/src/copmponents/Modal/styles.module.css
@@ -1,9 +1,9 @@
 .container {
     height: 100vh;
     width: 100vw;
-    background-color: rgba(255,255,255, 0.17);
+    background-color: rgba(255, 255, 255, 0.17);
     position: fixed;
-    top:0;
+    top: 0;
     left: 0;
     display: flex;
     justify-content: center;
@@ -21,15 +21,15 @@
     min-height: 400px;
     position: relative;
     z-index: 3;
-    padding: 20px;
+    padding: 40px;
     background-color: #1e272e;
     border-radius: 12px;
-    width: 80%;
+    width: 1200px;
     max-width: 80%;
 }
 
 .closeBtnWrap {
     position: absolute;
-    top:20px;
-    right: 20px;
+    top: 40px;
+    right: 32px;
 }
