--- a/app/src/pages/Board/ColumnForm/styles.module.css
+++ b/app/src/pages/Board/ColumnForm/styles.module.css
@@ -6,7 +6,6 @@
 .columnWrap {
     width: 300px;
     min-width: 300px;
-    height: 300px;
     padding: 10px;
 }
 
@@ -41,7 +40,12 @@
     height: 22px;
     margin: 4px 2px;
     border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .btnWrap {
     width: 100%;
