--- a/app/src/components/Inputs/styles.module.css
+++ b/app/src/components/Inputs/styles.module.css
@@ -6,7 +6,8 @@
     border: none;
     padding: 10px 12px;
     font-size: 24px;
-    color: white
+    color: white;
+    text-transform: uppercase;
 }
 
 .label {
