--- a/app/src/pages/Board/Column/styles.module.css
+++ b/app/src/pages/Board/Column/styles.module.css
@@ -24,6 +24,10 @@
     cursor: pointer;
     font-size: 24px;
     font-weight: 600;
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    margin-right: 5px;
 }
 
 .title {
